cd-gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dev-app-sample
  name: dev-app-sample
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: dev-app-sample
  type: ClusterIP
