cd-gitops/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dev-app-sample
  name: dev-app-sample
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: dev-app-sample
    weight: 100
